project/manifests/overlays/minikube/patch-todo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
spec:
  rules:
    - host: todo-app.local
      http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-app-svc
                port:
                  number: 3000
